--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -21,11 +21,20 @@
       </p>
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>We've sent your application to Hackney Electoral Register Office.</p>
+      <p>We've sent your application to The Clown Electoral Register Office.</p>
       <p>They will contact you either to confirm your registration, or to ask for more information.</p>
-      <p><a href="https://www.gov.uk/service-manual/user-centred-design/resources/patterns/feedback-pages.html">What did you think of this service?</a> (takes 30 seconds)</p>
 
+      <h2 class="govuk-heading-m">Feedback</h2>
+      <p>What did you think of this service? You can give us feedback through the link below</p>
 
+      </a> (takes 30 seconds)</p>
+
+      <a href="/feedback page" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
+        Give Feedback
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+        </svg>
+      </a>
     </div>
   </div>
 
