--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -4,6 +4,24 @@
   Confirmation page template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
+{% block beforeContent %}
+  <div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="https://www.gov.uk">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Section</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link">Subsection</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link">Confirmation</a>
+      </li>
+    </ol>
+  </div>
+{% endblock %}
 {% block content %}
 
   <div class="govuk-grid-row">
@@ -25,11 +43,11 @@
       <p>They will contact you either to confirm your registration, or to ask for more information.</p>
 
       <h2 class="govuk-heading-m">Feedback</h2>
-      <p>What did you think of this service? You can give us feedback through the link below</p>
+      <p>What did you think of this service? You can give us feedback through the link below.</p>
 
-      </a> (takes 30 seconds)</p>
+      <p>(takes 30 seconds)</p>
 
-      <a href="/feedback page" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
+      <a href="/feedback-page" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Give Feedback
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
