--- a/app/views/feedback-page.html
+++ b/app/views/feedback-page.html
@@ -79,7 +79,7 @@
 
       <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="more-detail">
-            How could we imporve this service?
+            How could we improve this service?
           </label>
         </h1>
         <div id="more-detail-hint" class="govuk-hint">
